refactored all connection tables, logic and tests